RESOLVED FIXED157930
Fix null dereferencing in CSSAnimationTriggerScrollValue::equals
https://bugs.webkit.org/show_bug.cgi?id=157930
Summary Fix null dereferencing in CSSAnimationTriggerScrollValue::equals
Alex Christensen
Reported 2016-05-19 16:15:04 PDT
Fix null dereferencing in CSSAnimationTriggerScrollValue::equals
Attachments
Patch (6.52 KB, patch)
2016-05-19 16:15 PDT, Alex Christensen
no flags
Patch (6.52 KB, patch)
2016-05-19 16:24 PDT, Alex Christensen
no flags
Alex Christensen
Comment 1 2016-05-19 16:15:45 PDT
Alex Christensen
Comment 2 2016-05-19 16:24:10 PDT
WebKit Commit Bot
Comment 3 2016-05-20 13:42:38 PDT
Comment on attachment 279444 [details] Patch Clearing flags on attachment: 279444 Committed r201223: <http://trac.webkit.org/changeset/201223>
WebKit Commit Bot
Comment 4 2016-05-20 13:42:42 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.