Fix null dereferencing in CSSAnimationTriggerScrollValue::equals https://bugs.webkit.org/show_bug.cgi?id=157930

Patch by Alex Christensen <achristensen@webkit.org> on 2016-05-20
Reviewed by Dean Jackson.

Source/WebCore:

Test: fast/css/compare-animation-trigger.html

* css/CSSAnimationTriggerScrollValue.cpp:
(WebCore::CSSAnimationTriggerScrollValue::equals):
* css/CSSAnimationTriggerScrollValue.h:
(WebCore::CSSAnimationTriggerScrollValue::create):
(WebCore::CSSAnimationTriggerScrollValue::startValue):
(WebCore::CSSAnimationTriggerScrollValue::endValue):
(WebCore::CSSAnimationTriggerScrollValue::hasEndValue):
(WebCore::CSSAnimationTriggerScrollValue::operator==):
(WebCore::CSSAnimationTriggerScrollValue::CSSAnimationTriggerScrollValue):
* css/CSSToStyleMap.cpp:
(WebCore::CSSToStyleMap::mapAnimationTrigger):
* css/CSSValue.h:
(WebCore::CSSValue::operator==):

LayoutTests:

* fast/css/compare-animation-trigger-expected.txt: Added.
* fast/css/compare-animation-trigger.html: Added.

Canonical link: https://commits.webkit.org/176065@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201223 268f45cc-cd09-0410-ab3c-d52691b4dbfc